applications/base/nextcloud/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: ${tenant}-nextcloud
  labels:
    alter-it.org/tenant: ${tenant}
    alter-it.org/app: nextcloud
    alter-it.org/managed-by: fluxcd
    reflector/k8up-credentials: "true"
    reflector/mysql-operator: "true"
